export interface Venue {
    _id?: string;
    name?: string;
    city?: string;
    address?: string;
    capacity?: number;
    createdAt?: Date;
    updatedAt?: Date;
}