@startuml
hide circle

class User {
  +_id : ObjectId
  +firstName : String
  +lastName : String
  +email : String
  +password : String
  +new : Boolean
  +isAdmin : Boolean
  +mobile : String
  +birthDate : Date
  +active : Boolean
  +imageUrl : String
  +createdAt : Date
  +updatedAt : Date
}

class League {
  +_id : ObjectId
  +name : String
  +season : String
  +category : String
  +createdAt : Date
  +updatedAt : Date
}

class Team {
  +_id : ObjectId
  +name : String
  +shortName : String
  +city : String
  +venue : ObjectId
  +iban : String
  +currency : String
  +createdAt : Date
  +updatedAt : Date
}

class Squad {
  +_id : ObjectId
  +name : String
  +league : ObjectId
  +team : ObjectId
  +createdAt : Date
  +updatedAt : Date
}

class SquadMembership {
  +_id : ObjectId
  +squad : ObjectId
  +user : ObjectId
  +roles : String[]
  +active : Boolean
  +createdAt : Date
  +updatedAt : Date
}

class TeamEvent {
  +_id : ObjectId
  +title : String
  +type : String
  +startDate : Date
  +endDate : Date
  +venue : ObjectId
  +squads : ObjectId[]
  +createdBy : ObjectId
  +createdAt : Date
  +updatedAt : Date
}

class EventParticipation {
  +_id : ObjectId
  +event : ObjectId
  +user : ObjectId
  +status : String
  +createdAt : Date
  +updatedAt : Date
}

class Comment {
  +_id : ObjectId
  +author : ObjectId
  +event : ObjectId
  +content : String
  +createdAt : Date
  +updatedAt : Date
}

class Venue {
  +_id : ObjectId
  +name : String
  +city : String
  +address : String
  +capacity : Number
  +createdAt : Date
  +updatedAt : Date
}

class Announcement {
  +_id : ObjectId
  +author : ObjectId
  +title : String
  +content : String
  +visibility : String
  +pinned : Boolean
  +createdAt : Date
  +updatedAt : Date
}

class Payment {
  +_id : ObjectId
  +user : ObjectId
  +amount : Number
  +status : String
  +dueDate : Date
  +type : String
  +createdAt : Date
  +updatedAt : Date
}

' =====================
' REFERENCES WITH CARDINALITY
' =====================

Venue "1" <-- "0..*" Team

Squad "0..*" --> "1" League
Squad "0..*" --> "1" Team

SquadMembership "0..*" --> "1" User
SquadMembership "0..*" --> "1" Squad

TeamEvent "0..*" --> "0..1" Venue
TeamEvent "0..*" --> "0..*" Squad
TeamEvent "0..*" --> "1" User

EventParticipation "0..*" --> "1" User
EventParticipation "0..*" --> "1" TeamEvent

Comment "0..*" --> "1" User
Comment "0..*" --> "1" TeamEvent

Announcement "0..*" --> "1" User

Payment "0..*" --> "1" User
@enduml